--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -38,10 +38,28 @@ management:
         auto-time-requests: true
 
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/biwise
+    username: root
+    password: expmysql
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: biwise.confirmation
+    password: Kapanadze1
+    properties:
+      mail:
+        smtp:
+          auth: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+          starttls:
+            enable: true
   autoconfigure:
     exclude: {org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchAutoConfiguration,org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration}
   application:
-    name: confirmhip
+    name: confirmation
   jmx:
     enabled: false
   data:
@@ -53,7 +71,7 @@ spring:
     properties:
       hibernate.jdbc.time_zone: UTC
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
@@ -86,6 +104,8 @@ server:
 info:
   # Comma separated list of profiles that will trigger the ribbon to show
   display-ribbon-on-profiles: 'dev'
+
+tokenSecret: Bearer
 
 confirmation:
   clientApp:
