add Invitation form

--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -6,7 +6,7 @@ management:
         include: ['configprops', 'env', 'health', 'info', 'jhimetrics', 'logfile', 'loggers', 'prometheus', 'threaddump']
   endpoint:
     health:
-      show-details: when-authorized
+      show-details: when_authorized
       roles: 'ROLE_ADMIN'
   info:
     git:
@@ -41,7 +41,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/biwise
     username: root
-    password: expmysql
+    password: password
   mail:
     host: smtp.gmail.com
     port: 587
@@ -59,7 +59,7 @@ spring:
   autoconfigure:
     exclude: {org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchAutoConfiguration,org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration}
   application:
-    name: confirmation
+    name: Audit
   jmx:
     enabled: false
   data:
@@ -109,7 +109,7 @@ tokenSecret: Bearer
 
 confirmation:
   clientApp:
-    name: 'confirmhipApp'
+    name: 'Audit App'
   # By default CORS is disabled. Uncomment to enable.
   # cors:
   #     allowed-origins: "*"
@@ -122,8 +122,8 @@ confirmation:
     from: lashakapanadze50@gmail.com
   swagger:
     default-include-pattern: /api/.*
-    title: confirmhip API
-    description: confirmhip API documentation
+    title: Audit API
+    description: Audit API documentation
     version: 0.0.1
     terms-of-service-url:
     contact-name:
