--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -39,7 +39,7 @@ management:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/biwise
+    url: jdbc:mysql://localhost:3306/biwise?useUnicode=yes&characterEncoding=UTF-8
     username: root
     password: password
   mail:
