--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/pickers": "^3.2.8",
+    "material-table": "^1.54.1"
   }
 }
