--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/biwise?useUnicode=yes&characterEncoding=UTF-8
     username: root
-    password: password
+    password: expmysql
   mail:
     host: smtp.gmail.com
     port: 587
@@ -82,13 +82,13 @@ spring:
 
   task:
     execution:
-      thread-name-prefix: confirmhip-task-
+      thread-name-prefix: Bewise-task-
       pool:
         core-size: 2
         max-size: 50
         queue-capacity: 10000
     scheduling:
-      thread-name-prefix: confirmhip-scheduling-
+      thread-name-prefix: Bewise-scheduling-
       pool:
         size: 2
   thymeleaf:
