--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/biwise?useUnicode=yes&characterEncoding=UTF-8
     username: root
-    password: expmysql
+    password: password
   mail:
     host: smtp.gmail.com
     port: 587
