--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
