--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "antd": "^3.26.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.0.0-beta.5",
+    "evergreen-ui": "^4.21.5",
     "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
