add user invitation, role assignments

--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -106,7 +106,7 @@ info:
   display-ribbon-on-profiles: 'dev'
 
 tokenSecret: Bearer
-
+invitedUserPassword: hL4bz0CPEJ
 audit:
   clientApp:
     name: 'Audit App'
