--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "evergreen-ui": "^4.21.5",
     "formik": "^2.0.6",
     "react": "^16.12.0",
-    "react-alert": "^6.0.0",
-    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-notifications": "^1.4.3",
     "react-pricing-table": "^0.3.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
