--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -42,11 +42,12 @@ spring:
     url: jdbc:mysql://localhost:3306/biwise?useUnicode=yes&characterEncoding=UTF-8
     username: root
     password: expmysql
+    driver-class-name: com.mysql.cj.jdbc.Driver
   mail:
     host: smtp.gmail.com
     port: 587
     username: biwise.confirmation
-    password: password
+    password: expmysql
     properties:
       mail:
         smtp:
