--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: biwise.confirmation
-    password: expmysql
+    password: Kapanadze1
     properties:
       mail:
         smtp:
@@ -67,15 +67,6 @@ spring:
     jpa:
       repositories:
         bootstrap-mode: deferred
-  jpa:
-    open-in-view: false
-    properties:
-      hibernate.jdbc.time_zone: UTC
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
   messages:
     basename: i18n/messages
   main:
