--- a/confirmation/src/main/resources/application.yml
+++ b/confirmation/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: biwise.confirmation
-    password: password
+    password: Kapanadze1
     properties:
       mail:
         smtp:
